# connected-shelf

./: .gitignore  README.md  pyproject.toml
infra/: compute.tf  iot.tf  provider.tf  storage.tf  variables.tf
src/backend/: main.py
src/cv/: data.yaml  live_interface.py  train.py
src/cv/utils/: capture_dataset.py  split_dataset.py
