[project]
name = "connected-shelf"
version = "0.1.0"
description = "Retail smart display system"
authors = [
    {name = "n@sonostud.io"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "ultralytics (>=8.4.7,<9.0.0)",
    "blobconverter (>=1.4.3,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.edge.dependencies]
awsiotsdk = "^1.28.0"
depthai = "2.31.0.0"
opencv-contrib-python = "^4.13.0.90"

[tool.poetry.group.backend.dependencies]
boto3 = "^1.42.31"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
ruff = "^0.14.13"

